--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,14 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <name>app</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <url>http://edu.tinkoff.com/</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
     <dependencies>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -27,6 +24,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-
+    
 </project>
