--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,8 @@
     <artifactId>app</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-<!--    <name>app</name>-->
-<!--    <url>http://edu.tinkoff.com/</url>-->
-
-<!--    <packaging>jar</packaging>-->
+    <name>app</name>
+    <url>http://edu.tinkoff.com/</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,43 +24,18 @@
             <version>5.8.0-M1</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.5.2</version>
-            <scope>test</scope>
-        </dependency>-->
-        <!--<dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.1</version>
-            <scope>test</scope>
-        </dependency>-->
     </dependencies>
-
-
 
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
-<!--                    <groupId>org.apache.maven.plugins</groupId>-->
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.1</version>
-                    <!--<configuration>
-                        <argLine>
-                            – illegal-access=permit
-                        </argLine>
-                    </configuration>-->
-
-                    <!-- <configuration>
-                         <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
-                     </configuration>-->
-
                 </plugin>
             </plugins>
-
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -73,16 +46,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
-                <!--<configuration>
-                    <argLine>
-                        – illegal-access=permit
-                    </argLine>
-                </configuration>-->
-
-               <!-- <configuration>
-                    <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
-                </configuration>-->
-
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
